Refactor `DefaultRetrievalAugmentor` logging and formatting
This commit updates the logging logic and re-formats the code in `DefaultRetrievalAugmentor.java`. It improves debug and trace message conditions and standardizes the indentation for better readability. Non-essential imports have also been removed.